# NeuralNetworkCPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  main.cpp
SMS/: CMakeLists.txt  Makefile  arithmetic.cpp  helpers.cpp  matrix.cpp  matrix.hpp
matrix/: matrix.hpp
unit_tests/: CMakeLists.txt  Makefile
